@@ -1,5 +1,7 @@
 2009-05-12  higepon  <higepon@users.sourceforge.jp>
 
+        * Bignum.h (scheme): Be sure to call mpz_clear when Bignum is GCed. thanks to enami-san.
+
         * lib/mosh/pp.ss (mosh): Improved the output of pp. (Issue 56).
 
         * test/print.scm: Added.
